--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start -- --http-server-default-timeout=180000",
     "test": "jest"
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.80.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.12.2",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-calendars": "^1.1313.0",
